--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="Imagens/logo.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="imagens/logo.ico" type="image/x-icon">
     <title>Meus links</title>
 </head>
 <body>
@@ -13,15 +13,15 @@
     <h2>Como falar comigo?</h2>
     <ul>
         <li>
-            <p><img src="Imagens/icone-github.png" alt="icone-github">
+            <p><img src="imagens/icone-github.png" alt="icone-github">
             <a href="https://github.com/palaciopedro" target="_blank" rel="external">/palaciopedro</a> - Acesse meu repositório público no GitHub</p>
         </li>
         <li>
-            <p><img src="Imagens/icone-instagram.png" alt="icone-instagram">
+            <p><img src="imagens/icone-instagram.png" alt="icone-instagram">
             <a href="https://instagram.com/palaciobhk" target="_blank" rel="external">/palaciobhk</a> - Me siga no Instagram</p>
         </li>
         <li>
-            <p><img src="Imagens/icone-linkedin.png" alt="icone-linkedin">
+            <p><img src="imagens/icone-linkedin.png" alt="icone-linkedin">
             <a href="https://www.linkedin.com/in/pedro-palacio/" target="_blank" rel="external">/palaciopedro</a> - Me adicione no Linkedin</p>
         </li>
     </ul>
