--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagens/logo.ico" type="image/x-icon">
     <title>Meus links</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Bem-vindo ao meu primeiro site!</h1>
-    <h2>Quem sou eu?</h2>
-    <p>Meu nome é <strong>Pedro Palacio Bahniuk</strong>, sou um jovem de 17 anos em início de carreira na área de tecnologia, com base sólida em Python e, no momento, estou estudando HTML5 e CSS3. Possuo facilidade para aprender novas ferramentas e compromisso com a execução cuidadosa de cada tarefa. Busco sempre aprimorar minhas habilidades e me desenvolver de forma consistente, contribuindo de maneira responsável e dedicada a qualquer projeto.</p>
-    <h2>Como falar comigo?</h2>
+    <h2 style="text-align: center;">Quem sou eu?</h2>
+    <p class="texto">Meu nome é <strong>Pedro Palacio Bahniuk</strong>, sou um jovem de <strong>17 anos</strong> em início de carreira na área de tecnologia, com <strong>base sólida em Python</strong> e, no momento, <strong>estou estudando HTML5 e CSS3</strong>. Possuo facilidade para aprender novas ferramentas e <strong>compromisso com a execução cuidadosa</strong> de cada tarefa. Busco sempre aprimorar minhas habilidades e me <strong>desenvolver de forma consistente</strong>, contribuindo de maneira responsável e dedicada a qualquer projeto.</p>
+    <h2 style="padding-left: 20px;">Como falar comigo?</h2>
     <ul>
         <li>
             <p><img src="imagens/icone-github.png" alt="icone-github">
