style for links

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     <ul>
         <li>
             <p><img src="imagens/icone-github.png" alt="icone-github">
-            <a href="https://github.com/palaciopedro" target="_blank" rel="external">/palaciopedro</a> - Acesse meu repositório público no GitHub</p>
+            <a href="https://github.com/palaciopedro" target="_blank" rel="external" class="link">/palaciopedro</a> - Acesse meu repositório público no GitHub</p>
         </li>
         <li>
             <p><img src="imagens/icone-instagram.png" alt="icone-instagram">
-            <a href="https://instagram.com/palaciobhk" target="_blank" rel="external">/palaciobhk</a> - Me siga no Instagram</p>
+            <a href="https://instagram.com/palaciobhk" target="_blank" rel="external" class="link">/palaciobhk</a> - Me siga no Instagram</p>
         </li>
         <li>
             <p><img src="imagens/icone-linkedin.png" alt="icone-linkedin">
-            <a href="https://www.linkedin.com/in/pedro-palacio/" target="_blank" rel="external">/palaciopedro</a> - Me adicione no Linkedin</p>
+            <a href="https://www.linkedin.com/in/pedro-palacio/" target="_blank" rel="external" class="link">/palaciopedro</a> - Me adicione no Linkedin</p>
         </li>
     </ul>
 </body>
