aprimorando sintaxe e estilo

--- a/index.html
+++ b/index.html
@@ -8,23 +8,38 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Bem-vindo ao meu primeiro site!</h1>
-    <h2 style="text-align: center;">Quem sou eu?</h2>
-    <p class="texto">Meu nome é <strong>Pedro Palacio Bahniuk</strong>, sou um jovem de <strong>17 anos</strong> em início de carreira na área de tecnologia, com <strong>base sólida em Python</strong> e, no momento, <strong>estou estudando HTML5 e CSS3</strong>. Possuo facilidade para aprender novas ferramentas e <strong>compromisso com a execução cuidadosa</strong> de cada tarefa. Busco sempre aprimorar minhas habilidades e me <strong>desenvolver de forma consistente</strong>, contribuindo de maneira responsável e dedicada a qualquer projeto.</p>
-    <h2 style="padding-left: 20px;">Como falar comigo?</h2>
-    <ul>
-        <li>
-            <p><img src="imagens/icone-github.png" alt="icone-github">
-            <a href="https://github.com/palaciopedro" target="_blank" rel="external" class="link">/palaciopedro</a> - Acesse meu repositório público no GitHub</p>
-        </li>
-        <li>
-            <p><img src="imagens/icone-instagram.png" alt="icone-instagram">
-            <a href="https://instagram.com/palaciobhk" target="_blank" rel="external" class="link">/palaciobhk</a> - Me siga no Instagram</p>
-        </li>
-        <li>
-            <p><img src="imagens/icone-linkedin.png" alt="icone-linkedin">
-            <a href="https://www.linkedin.com/in/pedro-palacio/" target="_blank" rel="external" class="link">/palaciopedro</a> - Me adicione no Linkedin</p>
-        </li>
-    </ul>
+    <main>
+        <header>
+            <h1>
+                Bem-vindo ao meu primeiro site!
+            </h1>
+            <nav>
+                <p>Linguagens utilizadas: <a href="https://www.w3schools.com/html/html_intro.asp" target="_blank">HTML</a> <a href="https://www.w3schools.com/css/css_intro.asp" target="_blank">CSS</a></p>
+            </nav>
+        </header>
+        <article>
+                <h1>
+                    Quem sou eu?
+                </h1>
+            <p>
+                Meu nome é Pedro Palacio Bahniuk, sou um jovem de 17 anos em início de carreira na área de tecnologia, com base sólida em Python e, no momento, estou estudando HTML5 e CSS3. Possuo facilidade para aprender novas ferramentas e compromisso com a execução cuidadosa de cada tarefa. Busco sempre aprimorar minhas habilidades e me desenvolver de forma consistente, contribuindo de maneira responsável e dedicada a qualquer projeto.
+            </p>
+            <aside>
+                <h1>
+                    Como falar comigo?
+                </h1>
+                <ul>
+                    <li><a href="">/palaciopedro</a> - Acesse meu repositório público no GitHub</li>
+                    <li><a href="">/palaciobhk</a> - Me siga no Instagram</li>
+                    <li><a href="">/palaciopedro</a> - Me adicione no Linkedin</li>
+                </ul>
+            </aside>
+        </article>
+    </main>
+    <footer>
+        <p>
+            Feito por <strong>Pedro Palacio</strong>
+        </p>
+    </footer>
 </body>
 </html>
