uptade links site

--- a/index.html
+++ b/index.html
@@ -8,34 +8,35 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <h1>
+            Bem-vindo ao meu primeiro site!
+        </h1>
+    </header>
+
+    <nav>
+    </nav>
+
     <main>
-        <header>
-            <h1>
-                Bem-vindo ao meu primeiro site!
-            </h1>
-            <nav>
-                <p>Linguagens utilizadas: <a href="https://www.w3schools.com/html/html_intro.asp" target="_blank">HTML</a> <a href="https://www.w3schools.com/css/css_intro.asp" target="_blank">CSS</a></p>
-            </nav>
-        </header>
         <article>
-                <h1>
-                    Quem sou eu?
-                </h1>
-            <p>
-                Meu nome é Pedro Palacio Bahniuk, sou um jovem de 17 anos em início de carreira na área de tecnologia, com base sólida em Python e, no momento, estou estudando HTML5 e CSS3. Possuo facilidade para aprender novas ferramentas e compromisso com a execução cuidadosa de cada tarefa. Busco sempre aprimorar minhas habilidades e me desenvolver de forma consistente, contribuindo de maneira responsável e dedicada a qualquer projeto.
-            </p>
-            <aside>
-                <h1>
-                    Como falar comigo?
-                </h1>
-                <ul>
-                    <li><a href="">/palaciopedro</a> - Acesse meu repositório público no GitHub</li>
-                    <li><a href="">/palaciobhk</a> - Me siga no Instagram</li>
-                    <li><a href="">/palaciopedro</a> - Me adicione no Linkedin</li>
-                </ul>
-            </aside>
+            <h1 class="primeiro">
+                Quem sou eu?
+            </h1>
+        <p>
+            Meu nome é <strong>Pedro Palacio Bahniuk</strong>, sou um jovem de 17 anos em início de carreira na área de tecnologia, com base sólida em <strong>Python</strong> e, no momento, estou estudando <strong>HTML5</strong> e <strong>CSS3</strong>. Possuo facilidade para <strong>aprender novas ferramentas</strong> e compromisso com a <strong>execução cuidadosa</strong> de cada tarefa. Busco sempre <strong>aprimorar minhas habilidades</strong> e me <strong>desenvolver</strong> de forma consistente, contribuindo de maneira responsável e dedicada a qualquer projeto.
+        </p>
         </article>
+
+        <aside>
+            <h1>
+                Como falar comigo?
+            </h1>
+            <p><img src="imagens/icone-github.png" alt="GitHub"><a href="#">/palaciopedro</a> - Acesse meu repositório público no <strong>GitHub</strong></li></p>
+            <p><img src="imagens/icone-instagram.png" alt="Instagram"><a href="#">/palaciobhk</a> - Me siga no <strong>Instagram</strong></p>
+            <p><img src="imagens/icone-linkedin.png" alt="Linkedin"><a href="#">/palaciopedro</a> - Me adicione no <strong>Linkedin</strong></p>
+        </aside>
     </main>
+    
     <footer>
         <p>
             Feito por <strong>Pedro Palacio</strong>
