--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </header>
 
     <nav>
+        <p>Linguagens utilizadas: <a href="https://www.w3schools.com/html/html_intro.asp" target="_blank">HTML</a> <a href="https://www.w3schools.com/css/css_intro.asp" target="_blank">CSS</a></p>
     </nav>
 
     <main>
