uptade links site

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <h1>
                 Como falar comigo?
             </h1>
-            <p><img src="imagens/icone-github.png" alt="GitHub"><a href="#">/palaciopedro</a> - Acesse meu repositório público no <strong>GitHub</strong></li></p>
+            <p><img src="imagens/icone-github.png" alt="GitHub"><a href="#">/palaciopedro</a> - Acesse meu repositório público no <strong>GitHub</strong>aaaaaaaaaaaaaaaaaaaaaaaaa</li></p>
             <p><img src="imagens/icone-instagram.png" alt="Instagram"><a href="#">/palaciobhk</a> - Me siga no <strong>Instagram</strong></p>
             <p><img src="imagens/icone-linkedin.png" alt="Linkedin"><a href="#">/palaciopedro</a> - Me adicione no <strong>Linkedin</strong></p>
         </aside>
