--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
     <title>Meus links</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <header>
@@ -32,9 +32,9 @@
             <h1>
                 Como falar comigo?
             </h1>
-            <p><img src="imagens/icone-github.png" alt="GitHub"><a href="#">/palaciopedro</a> - Acesse meu repositório público no <strong>GitHub</strong>aaaaaaaaaaaaaaaaaaaaaaaaa</li></p>
-            <p><img src="imagens/icone-instagram.png" alt="Instagram"><a href="#">/palaciobhk</a> - Me siga no <strong>Instagram</strong></p>
-            <p><img src="imagens/icone-linkedin.png" alt="Linkedin"><a href="#">/palaciopedro</a> - Me adicione no <strong>Linkedin</strong></p>
+            <p><img src="imagens/icone-github.png" alt="GitHub"><a href="https://github.com/palaciopedro" target="_blank">/palaciopedro</a> - Acesse meu repositório público no <strong>GitHub</strong></li></p>
+            <p><img src="imagens/icone-instagram.png" alt="Instagram"><a href="https://instagram.com/palaciobhk" target="_blank">/palaciobhk</a> - Me siga no <strong>Instagram</strong></p>
+            <p><img src="imagens/icone-linkedin.png" alt="Linkedin"><a href="https://linkedin.com/palaciopedro" target="_blank">/palaciopedro</a> - Me adicione no <strong>Linkedin</strong></p>
         </aside>
     </main>
     
