--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 Quem sou eu?
             </h1>
         <p>
-            Meu nome é <strong>Pedro Palacio Bahniuk</strong>, sou um jovem de 17 anos em início de carreira na área de tecnologia, com base sólida em <strong>Python</strong> e, no momento, estou estudando <strong>HTML5</strong> e <strong>CSS3</strong>. Possuo facilidade para <strong>aprender novas ferramentas</strong> e compromisso com a <strong>execução cuidadosa</strong> de cada tarefa. Busco sempre <strong>aprimorar minhas habilidades</strong> e me <strong>desenvolver</strong> de forma consistente, contribuindo de maneira responsável e dedicada a qualquer projeto.
+            Meu nome é <strong>Pedro Palacio Bahniuk</strong>, sou um jovem de 17 anos e estudo <strong>Engenharia de Software</strong> na <strong>Universidade Estadual de Maringá</strong>, tenho base sólida em <strong>Python</strong> e, no momento, estou estudando <strong>HTML5</strong> e <strong>CSS3</strong>. Possuo facilidade para <strong>aprender novas ferramentas</strong> e compromisso com a <strong>execução cuidadosa</strong> de cada tarefa. Busco sempre <strong>aprimorar minhas habilidades</strong> e me <strong>desenvolver</strong> de forma consistente, contribuindo de maneira responsável e dedicada a qualquer projeto.
         </p>
         </article>
 
