--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <p><img src="imagens/icone-github.png" alt="GitHub"><a href="https://github.com/palaciopedro" target="_blank">/palaciopedro</a> - Acesse meu repositório público no <strong>GitHub</strong></li></p>
             <p><img src="imagens/icone-instagram.png" alt="Instagram"><a href="https://instagram.com/palaciobhk" target="_blank">/palaciobhk</a> - Me siga no <strong>Instagram</strong></p>
             <p><img src="imagens/icone-linkedin.png" alt="Linkedin"><a href="https://www.linkedin.com/in/pedro-palacio/" target="_blank">/palaciopedro</a> - Me adicione no <strong>Linkedin</strong></p>
+            <p><img src="imagens/icone-curriculo.png" alt="Currículo"><a href="arquivos/curriculo.pdf" target="_blank">Currículo</a> - Conheça meu currículo</p>
         </aside>
     </main>
     
